# PPT-Agent

./: .env.example  .gitignore  DESIGN.md  LICENSE  README.md  pyproject.toml
docs/: session-state-sync-issues.md  ux-redesign-discussion.md
examples/: 勒布朗·詹姆斯：跨越时代的篮球传奇与成就解码.pptx  米哈游：一家以技术为基因、用工业化内容定义全球市场的“印钞机”式公司.pptx
src/ppt_agent/: config.py  llm.py  main.py  progress.py  search.py
src/ppt_agent/agent/: agent.py  prompts.py  state.py  subagents.py
src/ppt_agent/api/: app.py  deps.py  server.py  streaming.py
src/ppt_agent/api/routes/: __init__.py  sessions.py  templates.py  upload.py
src/ppt_agent/export/: pptx_builder.py  renderer.py
src/ppt_agent/prompts/: outline.py  research.py  slide.py  style.py
src/ppt_agent/templates/: registry.py
src/ppt_agent/templates/chinese_ink/: style_spec.json
src/ppt_agent/templates/chinese_ink/skeletons/: content.html  cover.html  ending.html  section.html  toc.html
src/ppt_agent/templates/creative/: style_spec.json
src/ppt_agent/templates/cyberpunk/: style_spec.json
src/ppt_agent/templates/cyberpunk/skeletons/: content.html  cover.html  ending.html  section.html  toc.html
src/ppt_agent/templates/education/: style_spec.json
src/ppt_agent/templates/report/: style_spec.json
src/ppt_agent/templates/simple_business/: style_spec.json
src/ppt_agent/templates/skeletons/: content.html  cover.html  ending.html  section.html  toc.html
src/ppt_agent/templates/sunset/: style_spec.json
src/ppt_agent/templates/sunset/skeletons/: content.html  cover.html  ending.html  section.html  toc.html
src/ppt_agent/templates/tech_dark/: style_spec.json
src/ppt_agent/templates/thesis_defense/: style_spec.json
src/ppt_agent/templates/thesis_defense/skeletons/: content.html  cover.html  ending.html  section.html  toc.html
src/ppt_agent/tools/: export.py  outline.py  research.py  slide_gen.py  template.py  upload.py
tests/: test_renderer.py  test_search.py  test_tools.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.vue
web/src/api/: client.ts  types.ts
web/src/components/: ChatInterface.vue  FileUpload.vue  InputBar.vue  MessageList.vue  OutlinePreview.vue  PipelineStepper.vue  ResearchPreview.vue  SessionList.vue  SlideAiPanel.vue  SlideEditor.vue  SlidePreview.vue  SourceEditor.vue  TemplateCard.vue  TemplateLibrary.vue  TemplateSelector.vue  VisualEditor.vue
web/src/export/: editableExport.ts  types.ts
web/src/stores/: session.ts  sessions.ts
web/src/styles/: main.css
