[project]
name = "ppt-agent"
version = "0.1.0"
description = "AI-driven PowerPoint generation through conversational interaction"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.5.3",
    "fastapi>=0.136.1",
    "langchain-openai>=1.2.1",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "markitdown[pdf]>=0.1.1",
    "playwright>=1.58.0",
    "pydantic-settings>=2.14.0",
    "trafilatura>=2.0.0",
    "python-multipart>=0.0.20",
    "python-pptx>=1.0.2",
    "uvicorn[standard]>=0.34.0",
    "zhipuai>=2.1.5.20250825",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
ppt-agent = "ppt_agent.main:main"
ppt-agent-api = "ppt_agent.api.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
